Complete Cquirrel Q3 algorithm and SF0.1 experiments